--- a/config/locales/cn.yml
+++ b/config/locales/cn.yml
@@ -1,5 +1,8 @@
 cn:
   confirm: "你确定吗?"
+  date:
+    formats:
+      default: '%Y年%m月%d日'
   will_paginate:
     previous_label: "&#8592; 后退"
     next_label: "前进 &#8594;"
